# Python_my_project

./: pyproject.toml
.github/workflows/: ci.yml
my_project/: main.py
tests/: test_main.py
